--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>php-yaml</title>
+    <title>php-yaml: YAML-1.1 parser and emitter PECL package</title>
   </head>
 
   <body>
@@ -18,7 +18,10 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/bd808/pecl-file_formats-yaml">View on GitHub</a>
 
-          <h1 id="project_title">php-yaml</h1>
+          <h1 id="project_title">
+            <img id="project_logo" src="images/php-yaml.png">
+            php-yaml
+          </h1>
           <h2 id="project_tagline">YAML-1.1 parser and emitter PECL package</h2>
 
             <section id="downloads">
