Link to php/pecl-file_formats-yaml

--- a/index.html
+++ b/index.html
@@ -16,25 +16,20 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/bd808/pecl-file_formats-yaml">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/php/pecl-file_formats-yaml">View on GitHub</a>
 
           <h1 id="project_title">
             <img id="project_logo" src="images/php-yaml.png">
             php-yaml
           </h1>
           <h2 id="project_tagline">YAML-1.1 parser and emitter PECL package</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/bd808/pecl-file_formats-yaml/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/bd808/pecl-file_formats-yaml/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>The Yaml PHP Extension provides a wrapper to the LibYAML library.</p>
+        <p>The <a href="//pecl.php.net/package/yaml">Yaml PHP Extension</a> provides a wrapper to the LibYAML library.</p>
 
 <p>It gives the user the ability to parse YAML document streams into PHP
 constructs and emit PHP constructs as valid YAML 1.1 documents.</p>
@@ -46,7 +41,7 @@ constructs and emit PHP constructs as valid YAML 1.1 documents.</p>
 </ul>
 
 <h2>
-<a id="key-features" class="anchor" href="#key-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Key Features</h2>
+<a id="key-features" class="anchor" href="#key-features" aria-hidden="true"></a>Key Features</h2>
 
 <ul>
 <li>
@@ -58,7 +53,7 @@ constructs and emit PHP constructs as valid YAML 1.1 documents.</p>
 </ul>
 
 <h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"></a>Installation</h2>
 
 <p>Php-yaml can be installed <a href="https://secure.php.net/manual/en/install.pecl.php">using PHP's PECL package manager</a>. This extension requires the <a href="http://pyyaml.org/wiki/LibYAML">LibYAML C library</a> version 0.1.0 or higher to be installed.</p>
 
@@ -67,12 +62,12 @@ $ sudo pecl install yaml
 </code></pre>
 
 <h2>
-<a id="use" class="anchor" href="#use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Use</h2>
+<a id="use" class="anchor" href="#use" aria-hidden="true"></a>Use</h2>
 
 <p>See the <a href="http://php.net/yaml">extension documentation</a> for (mostly) complete details on using the library.</p>
 
 <h3>
-<a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h3>
+<a id="example" class="anchor" href="#example" aria-hidden="true"></a>Example</h3>
 
 <div class="highlight highlight-php"><pre><span class="pl-pse">&lt;?php</span><span class="pl-s1"></span>
 <span class="pl-s1"><span class="pl-smi">$addr</span> <span class="pl-k">=</span> <span class="pl-c1">array</span>(</span>
@@ -121,7 +116,7 @@ $ sudo pecl install yaml
 <span class="pl-s1"><span class="pl-c1">var_dump</span>(<span class="pl-smi">$parsed</span> <span class="pl-k">==</span> <span class="pl-smi">$invoice</span>);</span></pre></div>
 
 <h2>
-<a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgements</h2>
+<a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"></a>Acknowledgements</h2>
 
 <p>php-yaml v0.1.0 through v0.3.0 was developed by <a href="http://d.hatena.ne.jp/rsky/20071228/1198841055">Ryusuke Sekiyama</a>.</p>
 
